--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<meta http-equiv="refresh" content="0; URL=_static/index.html">
+<meta http-equiv="refresh" content="0; URL=static/index.html">
 </head>
 </html>
 
