--- a/static/index.html
+++ b/static/index.html
@@ -65,7 +65,7 @@ Avoid debt."
 
 -- JH Collins
 </script></section><section  data-markdown><script type="text/template">
-### The simple math behind early retirement
+### The Simple Math Behind Early Retirement
 
 &nbsp;
 
@@ -106,7 +106,7 @@ as a percentage of your take-home pay
 		<td class="column-1">100</td><td class="column-2">Zero</td>
 	</tr></tbody></table>
 
-<aside class="notes"><p>average plos employee puts in 7% from pay check</p>
+<aside class="notes"><p>average PLOS employee puts in 7% from pay check</p>
 </aside></script></section><section  data-markdown><script type="text/template">
 ## The 4% rule
 
@@ -139,7 +139,7 @@ your savings will most likely continue to grow large after this</p>
 &nbsp;
 
 * Pay off highest interest loans first<!-- .element: class="fragment" -->
-* Etc...<!-- .element: class="fragment" -->
+* etc...<!-- .element: class="fragment" -->
 * See Dave Ramsey for more info<!-- .element: class="fragment" -->
 </script></section><section  data-markdown><script type="text/template">
 # Get Frugal
@@ -217,8 +217,8 @@ Put your savings to work
 
 <aside class="notes"><p>Jono&#39;s crude view of investment risks vs rewards
 here is a terrible graphic I made</p>
-<p>Banks / credit unions = %0.10
-CDs / Money market = %0.20
+<p>Banks / credit unions = %0.25
+CDs / Money market = %1
 Government bonds = %2-%3
 Junk bonds = %6
 (Interest rates) = %1 - %10
@@ -226,8 +226,7 @@ TDFs / Robo advisors
 Index funds = %8
 Real estate
 Individual stocks &gt; %20
-Collectables
-Crytocurrency = -%50 - %1000</p>
+Collectables / Crytocurrency = -%50 to %1000</p>
 </aside></script></section><section  data-markdown><script type="text/template">
 ## Risk Tolerance
 
@@ -235,7 +234,7 @@ Crytocurrency = -%50 - %1000</p>
 
 <aside class="notes"><p>the stock market can be volatile. you can loose money one day and gain the next. if any losses keep you up at night the stock market is not for you.</p>
 </aside></script></section><section  data-markdown><script type="text/template">
-## Emergency fund
+## Emergency Fund
 
 &nbsp;
 
@@ -273,7 +272,7 @@ If you dont have access to Total stock market:
 
 Start with $10k in a saving account
 
-* Bank interest rate = %2
+* Bank savings rate = %0.5
 
 * Federal interest rate (40 year avg) = %5
 
@@ -486,7 +485,7 @@ There is an active community with many schools of thought, debates, books, blogs
 
 * [r/churning](https://www.reddit.com/r/churning/) (Forum)
   
-* [This presentation](http://jonocodes.github.io/whyfi) (http://jonocodes.github.io/whyfi)
+* [jonocodes.github.io/whyfi](http://jonocodes.github.io/whyfi) (This Talk)
 </script></section><section  data-markdown><script type="text/template">
 # TL;DR
 
@@ -538,7 +537,7 @@ Put savings into total stock market index fund<!-- .element: class="fragment" --
             // options from URL query string
             var queryOptions = Reveal.getQueryHash() || {};
 
-            var options = {"controls":true,"progress":false,"transition":"zoom","math":{}};
+            var options = {"controls":true,"progress":false,"transition":"zoom"};
             options = extend(defaultOptions, options, queryOptions);
         </script>
 
