Moving disclaimer text into note from slide

--- a/static/index.html
+++ b/static/index.html
@@ -25,9 +25,10 @@
 
 &nbsp;
 
-Nothing in this presentation is endorsed by PLOS. Neither I nor PLOS hold any responsibility for actions you take based on this information.
+...
 
-<aside class="notes"><p>I will be explaining some concepts that I use to manage my personal finances. Each person&#39;s needs are unique and there is not a one size fits all solution for every situation or risk tolerance.</p>
+<aside class="notes"><p>Nothing in this presentation is endorsed by PLOS. Neither I nor PLOS hold any responsibility for actions you take based on this information.</p>
+<p>I will be explaining some concepts that I use to manage my personal finances. Each person&#39;s needs are unique and there is not a one size fits all solution for every situation or risk tolerance.</p>
 <p>I am not an expert. I just started learning about this stuff in the past 6 months.</p>
 </aside></script></section><section  data-markdown><script type="text/template">
 ## What is FI?
@@ -398,7 +399,7 @@ Takes a couple hours a year to check up on and rebalance if you want
 * Treat the index fund like my 401k and put in a fixed amount every month
 * Keep 90% in total stock market (including retirement accounts)
 * 10% in cash
-* When I turn 50 I will start to re-balance 25% into bonds (wealth preservation)
+* When I turn 50 I will start to rebalance 25% into bonds (wealth preservation)
 </script></section><section  data-markdown><script type="text/template">
 ## Tax Optimization
 </script></section><section  data-markdown><script type="text/template">
