fixing image path

--- a/static/index.html
+++ b/static/index.html
@@ -42,7 +42,7 @@
 
 <aside class="notes"><p>Making enough money so you can move out of your parents house!</p>
 </aside></script></section><section  data-markdown><script type="text/template">
-# ![](/images/lawn_mower.jpg)
+# ![](images/lawn_mower.jpg)
 </script></section><section  data-markdown><script type="text/template">
 - Financial Independence is about the journey to early retirement and/or pursuing to do what you want with your time.
 
@@ -164,7 +164,7 @@ Pay $0 to $30 per month
 
 Yearly savings ($25 vs $60) = ~$400 / per line
 </script></section><section  data-markdown><script type="text/template">
-# ![](/images/mvnos.png)
+# ![](images/mvnos.png)
 </script></section><section  data-markdown><script type="text/template">
 ## Eat Out Less
 
@@ -184,7 +184,7 @@ Invest those savings in an index fund, and 10 years later =<!-- .element: class=
 </aside></script></section><section  data-markdown><script type="text/template">
 ## Buy a Gently Used Car
 
-# ![](/images/buying_car.jpg)
+# ![](images/buying_car.jpg)
 
 Yearly savings of buying a 3 year old car = ~$1,000
 
@@ -192,7 +192,7 @@ Yearly savings of buying a 3 year old car = ~$1,000
 </aside></script></section><section  data-markdown><script type="text/template">
 ## Ride a Bicycle
 
-# ![](/images/sf_bike.jpg)
+# ![](images/sf_bike.jpg)
 </script></section><section  data-markdown><script type="text/template">
 - Bikes are inexpensive
 - Requires no insurance, registration, license, parking spaces
@@ -207,7 +207,7 @@ Yearly savings by biking instead of driving = ~$8,000
 </script></section><section  data-markdown><script type="text/template">
 # Budgeting
 </script></section><section  data-markdown><script type="text/template">
-# ![](/images/budget_tracking.png)
+# ![](images/budget_tracking.png)
 </script></section><section  data-markdown><script type="text/template">
 ## Couponing
 
@@ -221,7 +221,7 @@ ok?</script></section><section  data-markdown><script type="text/template">
 
 Put your savings to work
 </script></section><section  data-markdown><script type="text/template">
-# ![](/images/risk_reward.png)
+# ![](images/risk_reward.png)
 
 <aside class="notes"><p>Jono&#39;s crude view of investment risks vs rewards
 here is a terrible graphic I made</p>
@@ -237,7 +237,7 @@ Collectables / Crytocurrency = -%50 to %1000</p>
 </aside></script></section><section  data-markdown><script type="text/template">
 ## Risk Tolerance
 
-# ![](/images/stocks_vs_bonds.jpeg)
+# ![](images/stocks_vs_bonds.jpeg)
 
 <aside class="notes"><p>the stock market can be volatile. you can loose money one day and gain the next. if any losses keep you up at night the stock market is not for you.</p>
 </aside></script></section><section  data-markdown><script type="text/template">
@@ -273,7 +273,7 @@ If you want to exclude some no-so-nice companies:
 
 - My favorite: ESGV
 </script></section><section  data-markdown><script type="text/template">
-# ![](/images/vtsax.png)
+# ![](images/vtsax.png)
 </script></section><section  data-markdown><script type="text/template">
 ## Example Returns
 
@@ -338,7 +338,7 @@ Invest for the long term
 
 - Over the last 100 years (1922-2022) the average yearly market increase is 12.5%
 </script></section><section  data-markdown><script type="text/template">
-# ![](/images/stock_top.png)
+# ![](images/stock_top.png)
 
 <aside class="notes"><p>Even with these disasters...</p>
 <ul>
@@ -457,7 +457,7 @@ Put $350 in the S&P 500 and in two years that will be $420
 
 <aside class="notes"><p>your mileage may vary, literally</p>
 </aside></script></section><section  data-markdown><script type="text/template">
-# ![](/images/churning_chart.png)
+# ![](images/churning_chart.png)
 
 <aside class="notes"><p>opening schedule chart</p>
 </aside></script></section><section  data-markdown><script type="text/template">
@@ -469,7 +469,7 @@ Bring a companion on <u>every flight</u> for 1-2 years.
 
 This usually takes getting 2 southwest credit cards.
 </script></section><section  data-markdown><script type="text/template">
-# ![](/images/rewards_returns.png)
+# ![](images/rewards_returns.png)
 </script></section><section  data-markdown><script type="text/template">
 ## FI Community
 
