--- a/static/slides.html
+++ b/static/slides.html
@@ -186,7 +186,7 @@ Invest those savings in an index fund, and 10 years later =<!-- .element: class=
 
 # ![](images/buying_car.jpg)
 
-Yearly savings of buying a 3 year old car = ~$1,000
+If you include investment opportunity costs, [the 20 year difference from having a used car versus a new car is almost $250,000](https://www.choosefi.com/022-true-cost-car-ownership/)
 
 <aside class="notes"><p>Most new cars depreciate 40% to 50% during the first three years of ownership.</p>
 </aside></script></section><section  data-markdown><script type="text/template">
@@ -439,21 +439,21 @@ Every 3 months open a different card and repeat
 - Chase Sapphire Preferred = 60k
 - Chase Ink Business = 100k
 - United Explorer = 60k
-- United MileagePlus = 50k
+- Capital One Venture = 75k
 
-2 years later you have 450k points
+2 years later you have ~500k points
 
-worth $5000
+worth $6000
 </script></section><section  data-markdown><script type="text/template">
 ## Return on investment
 
 &nbsp;
 
-Spend $350 in credit card fees and got $5000 in flights/hotels
+Spend $450 in credit card fees and get $6000 in flights/hotels
 
 vs
 
-Put $350 in the S&P 500 and in two years that will be $420
+Put $450 in the S&P 500 and in two years that will be $540
 
 <aside class="notes"><p>your mileage may vary, literally</p>
 </aside></script></section><section  data-markdown><script type="text/template">
@@ -467,7 +467,12 @@ Put $350 in the S&P 500 and in two years that will be $420
 
 Bring a companion on <u>every flight</u> for 1-2 years.
 
-This usually takes getting 2 southwest credit cards.
+That's a lot of savings!
+
+&nbsp;
+
+This typically requires getting 2 southwest credit cards.
+(ask me for details)
 </script></section><section  data-markdown><script type="text/template">
 # ![](images/rewards_returns.png)
 </script></section><section  data-markdown><script type="text/template">
